Moved build to a shell file so can be run locally